# jclip

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg
src/jclip/: jclip.py  main.py
