
[metadata]
name = jclip
version = attr: jclip.version.VERSION
author = Viacheslav
author_email = viacheslav@mcublog.xyz
description = The Jira attach script.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mcublog/jclip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pylogus==0.1.0
    jira>=3.2.2
    colorama>=0.4.6

[options.entry_points]
console_scripts =
    jclip = jclip.jclip:main

[options.packages.find]
where = src